--- a/TraficLights/TraficLights/TraficLights.csproj
+++ b/TraficLights/TraficLights/TraficLights.csproj
@@ -116,7 +116,7 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Animals.cs" />
+    <Compile Include="Characters.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
