--- a/TraficLights1/TraficLights/TraficLights.csproj
+++ b/TraficLights1/TraficLights/TraficLights.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProjectGuid>{97EC4AEA-F074-480B-8083-F1FFEFE293EB}</ProjectGuid>
+    <ProjectGuid>{88770BD7-295B-47A2-A5C2-CEBC7C764364}</ProjectGuid>
     <OutputType>AppContainerExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>TraficLights</RootNamespace>
@@ -116,13 +116,17 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Characters.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Dino.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Santa.cs" />
+    <Compile Include="TraficLight.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -130,14 +134,63 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\App\LargeTile.scale-100.png" />
+    <Content Include="Assets\App\LargeTile.scale-125.png" />
+    <Content Include="Assets\App\LargeTile.scale-150.png" />
+    <Content Include="Assets\App\LargeTile.scale-200.png" />
+    <Content Include="Assets\App\LargeTile.scale-400.png" />
+    <Content Include="Assets\App\SmallTile.scale-100.png" />
+    <Content Include="Assets\App\SmallTile.scale-125.png" />
+    <Content Include="Assets\App\SmallTile.scale-150.png" />
+    <Content Include="Assets\App\SmallTile.scale-200.png" />
+    <Content Include="Assets\App\SmallTile.scale-400.png" />
+    <Content Include="Assets\App\SplashScreen.scale-100.png" />
+    <Content Include="Assets\App\SplashScreen.scale-125.png" />
+    <Content Include="Assets\App\SplashScreen.scale-150.png" />
+    <Content Include="Assets\App\SplashScreen.scale-200.png" />
+    <Content Include="Assets\App\SplashScreen.scale-400.png" />
+    <Content Include="Assets\App\Square150x150Logo.scale-100.png" />
+    <Content Include="Assets\App\Square150x150Logo.scale-125.png" />
+    <Content Include="Assets\App\Square150x150Logo.scale-150.png" />
+    <Content Include="Assets\App\Square150x150Logo.scale-200.png" />
+    <Content Include="Assets\App\Square150x150Logo.scale-400.png" />
+    <Content Include="Assets\App\Square44x44Logo.altform-lightunplated_targetsize-16.png" />
+    <Content Include="Assets\App\Square44x44Logo.altform-lightunplated_targetsize-24.png" />
+    <Content Include="Assets\App\Square44x44Logo.altform-lightunplated_targetsize-256.png" />
+    <Content Include="Assets\App\Square44x44Logo.altform-lightunplated_targetsize-32.png" />
+    <Content Include="Assets\App\Square44x44Logo.altform-lightunplated_targetsize-48.png" />
+    <Content Include="Assets\App\Square44x44Logo.altform-unplated_targetsize-16.png" />
+    <Content Include="Assets\App\Square44x44Logo.altform-unplated_targetsize-24.png" />
+    <Content Include="Assets\App\Square44x44Logo.altform-unplated_targetsize-256.png" />
+    <Content Include="Assets\App\Square44x44Logo.altform-unplated_targetsize-32.png" />
+    <Content Include="Assets\App\Square44x44Logo.altform-unplated_targetsize-48.png" />
+    <Content Include="Assets\App\Square44x44Logo.scale-100.png" />
+    <Content Include="Assets\App\Square44x44Logo.scale-125.png" />
+    <Content Include="Assets\App\Square44x44Logo.scale-150.png" />
+    <Content Include="Assets\App\Square44x44Logo.scale-200.png" />
+    <Content Include="Assets\App\Square44x44Logo.scale-400.png" />
+    <Content Include="Assets\App\Square44x44Logo.targetsize-16.png" />
+    <Content Include="Assets\App\Square44x44Logo.targetsize-24.png" />
+    <Content Include="Assets\App\Square44x44Logo.targetsize-256.png" />
+    <Content Include="Assets\App\Square44x44Logo.targetsize-32.png" />
+    <Content Include="Assets\App\Square44x44Logo.targetsize-48.png" />
+    <Content Include="Assets\App\StoreLogo.scale-100.png" />
+    <Content Include="Assets\App\StoreLogo.scale-125.png" />
+    <Content Include="Assets\App\StoreLogo.scale-150.png" />
+    <Content Include="Assets\App\StoreLogo.scale-200.png" />
+    <Content Include="Assets\App\StoreLogo.scale-400.png" />
+    <Content Include="Assets\App\Wide310x150Logo.scale-100.png" />
+    <Content Include="Assets\App\Wide310x150Logo.scale-125.png" />
+    <Content Include="Assets\App\Wide310x150Logo.scale-150.png" />
+    <Content Include="Assets\App\Wide310x150Logo.scale-200.png" />
+    <Content Include="Assets\App\Wide310x150Logo.scale-400.png" />
+    <Content Include="Assets\Character\Dino\dino_idle.gif" />
+    <Content Include="Assets\Character\Dino\dino_jump.gif" />
+    <Content Include="Assets\Character\Dino\dino_run.gif" />
+    <Content Include="Assets\Character\Santa\santa_idle.gif" />
+    <Content Include="Assets\Character\Santa\santa_jump.gif" />
+    <Content Include="Assets\Character\Santa\santa_run.gif" />
     <Content Include="Properties\Default.rd.xml" />
-    <Content Include="Assets\LockScreenLogo.scale-200.png" />
-    <Content Include="Assets\SplashScreen.scale-200.png" />
-    <Content Include="Assets\Square150x150Logo.scale-200.png" />
-    <Content Include="Assets\Square44x44Logo.scale-200.png" />
-    <Content Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png" />
-    <Content Include="Assets\StoreLogo.png" />
-    <Content Include="Assets\Wide310x150Logo.scale-200.png" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
@@ -151,9 +204,10 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
-      <Version>6.2.14</Version>
+      <Version>6.2.12</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
