--- a/GameEngine/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine/GameEngine.vcxproj
@@ -153,6 +153,7 @@
   <ItemGroup>
     <ClCompile Include="Button.cpp" />
     <ClCompile Include="Entity.cpp" />
+    <ClCompile Include="Keyboard.cpp" />
     <ClCompile Include="Mouse.cpp" />
     <ClCompile Include="RenderWindow.cpp" />
     <ClCompile Include="Main.cpp" />
@@ -161,6 +162,7 @@
   <ItemGroup>
     <ClInclude Include="Button.hpp" />
     <ClInclude Include="Entity.hpp" />
+    <ClInclude Include="Keyboard.hpp" />
     <ClInclude Include="Math.hpp" />
     <ClInclude Include="Mouse.hpp" />
     <ClInclude Include="RenderWindow.hpp" />
