--- a/The wandering heretic/GameEngine/GameEngine.vcxproj.filters
+++ b/The wandering heretic/GameEngine/GameEngine.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="PopUpWindow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Slider.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Keyboard.hpp">
@@ -87,6 +90,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="PopUpWindow.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Slider.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
