Cleaned the code and added Home Buttons

--- a/The wandering heretic/The wandering heretic/The wandering heretic.vcxproj.filters
+++ b/The wandering heretic/The wandering heretic/The wandering heretic.vcxproj.filters
@@ -44,6 +44,9 @@
     <Image Include="Assets\Buttons.png">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="Assets\GUI\HomeButtons.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameManager.hpp">
