--- a/The wandering heretic/The wandering heretic/The wandering heretic.vcxproj
+++ b/The wandering heretic/The wandering heretic/The wandering heretic.vcxproj
@@ -36,6 +36,7 @@
     <Image Include="Assets\backround_pic.png" />
     <Image Include="Assets\Buttons.png" />
     <Image Include="Assets\ground_grass1.png" />
+    <Image Include="Assets\GUI\Arrows.png" />
     <Image Include="Assets\GUI\HomeButtons.png" />
     <Image Include="Assets\hulking_knight.png" />
   </ItemGroup>
