--- a/The wandering heretic/GameEngine/GameEngine.vcxproj
+++ b/The wandering heretic/GameEngine/GameEngine.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="Audio.hpp" />
     <ClInclude Include="Button.hpp" />
     <ClInclude Include="Entity.hpp" />
+    <ClInclude Include="JsonParser.hpp" />
     <ClInclude Include="Keyboard.hpp" />
     <ClInclude Include="Math.hpp" />
     <ClInclude Include="Mouse.hpp" />
